<resources>
    <string name="app_name">EasyCalories</string>
    <string name="back">Back</string>
    <string name="chooseFood">Choose a food</string>
    <string name="addingFood">Add a food</string>
    <string name="editingPortion">Enter weight of the portion</string>
    <string name="editingFood">Edit the food</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="proteins">Proteins</string>
    <string name="P">P</string>
    <string name="fats">Fats</string>
    <string name="F">F</string>
    <string name="carbohydrates">Carb-s</string>
    <string name="C">C</string>
    <string name="calories">Сalories</string>
    <string name="calories_title">Calories:</string>
    <string name="water_limit_title">Water per day (ml):</string>
    <string name="kcal">kcal</string>
    <string name="weight_g">(g):</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="jan">JAN</string>
    <string name="feb">FEB</string>
    <string name="mar">MAR</string>
    <string name="apr">APR</string>
    <string name="may">MAY</string>
    <string name="jun">JUN</string>
    <string name="jul">JUL</string>
    <string name="aug">AUG</string>
    <string name="sep">SEP</string>
    <string name="oct">OCT</string>
    <string name="nov">NOV</string>
    <string name="dec">DEC</string>
    <string name="editProfile">Edit profile</string>
    <string name="editLimits">Edit calories limit</string>
    <string name="about">About the app</string>
    <string name="enterValue">Enter the value</string>
    <string name="enterProteinsPercent">Enter % of proteins</string>
    <string name="enterFatsPercent">Enter % of fats</string>
    <string name="enterCarbsPercent">Enter % of carbohydrates</string>
    <string name="enterCaloriesLimit">Enter limit of calories</string>
    <string name="enterNutrientsFor100Gr">Enter nutrients in 100 gr.</string>
    <string name="foodName">Food name</string>
    <string name="portionWeight">Weight of the portion</string>
    <string name="glycemicIndex">Glycemic index</string>
    <string name="numberFormatException">Wrong type of value!</string>
    <string name="tooShort">The length must be at least 1 character!</string>
    <string name="editCaloriesLimitFragment">Edit calories limit</string>
    <string name="checkTheFieldsAreCorrect">Check that the fields are filled in correctly!</string>
    <string name="summOfNutrientsMoreThan100">Summ of nutrients can\'t be more? than 100!</string>
    <string name="foodAlreadyExists">This food is already exists!</string>
    <string name="tooMuchValue">Too much value!</string>
    <string name="portionWeightWrong">Weight of the portion wrong!</string>
    <string name="percent">percent(%)</string>
    <string name="gramm">gramm(g)</string>
    <string name="search">Search</string>
    <string name="meals">MEALS:</string>
    <!--  Anthropometric data  -->
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="anthropometricData">Anthropometric data</string>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height (cm)</string>
    <string name="chestCirc">Chest (cm)</string>
    <string name="waistCirc">Waist (cm)</string>
    <string name="hipCirc">Hip (cm)</string>
    <string name="neckCirc">Neck (cm)</string>
    <string name="setWeigt">Set weight today</string>
    <string name="yourWeight">Your weight is:</string>
    <string name="BMI">BMI</string>
    <string name="BMISevereThinness">Underweight (Severe thinness)</string>
    <string name="BMIMildThinness">Underweight (Mild thinness)</string>
    <string name="BMINormalRange">Normal range</string>
    <string name="BMIOverweight">Overweight (Pre-obese)</string>
    <string name="BMIObeseClassI">Obese (Class I)</string>
    <string name="BMIObeseClassII">Obese (Class II)</string>
    <string name="BMIObeseClassIII">Obese (Class III)</string>
    <!--    Errors and response     -->
    <string name="wrongResponse">Something wrong. Try again.</string>
    <string name="responseCode">Response code: </string>
    <string name="serverError">Server not answer. Try later. </string>
    <string name="nullActivity">App Error(null activity)</string>
    <!--    TOASTS    -->
    <string name="startFrom0">Can\'t start with "0"</string>
    <string name="startFrom.">Can\'t start with "."</string>
    <!--    ABOUT    -->
    <string name="nameApp">Easy Calories V1.5</string>
    <string name="developer">Developer: Korostylev K.A.</string>
    <string name="email">Email: developkirill@yandex.ru</string>
    <!--    CONTENT DESCRIPTION     -->
    <string name="backButtonDescr">Back button</string>
    <string name="fwdButtonDescr">Forward button</string>
    <string name="changeButtonDescr">Change button</string>
    <string name="weightDescr">Weight</string>
    <!--    WATER      -->
    <string name="water_label">WATER: %1d ml / %2d ml</string>
    <string name="ml100">+100ml</string>
    <string name="ml250">+250ml</string>
    <string name="ml500">+500ml</string>


</resources>