<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".">

    <View
        android:id="@+id/divider"
        android:visibility="invisible"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toEndOf="@id/editedCarbsTitle"
        android:background="?android:attr/listDivider" />
    <TextView
        android:id="@+id/editedFoodNameTitle"
        android:layout_width="@dimen/nutrient_value_weight_large"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common"
        android:layout_marginTop="@dimen/common"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/textTitle"
        android:text="@string/foodName" />
    <TextView
        android:id="@+id/editedFoodNameValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_edit_text"
        android:background="@drawable/edit_text_value"
        android:hint="@string/enterValue"
        app:layout_constraintStart_toEndOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/common"
        app:layout_constraintTop_toTopOf="@id/editedFoodNameTitle"
        app:layout_constraintBottom_toBottomOf="@id/editedFoodNameTitle">
    </TextView>
    <TextView
        android:id="@+id/editedPortionWeightTitle"
        android:layout_width="@dimen/nutrient_value_weight_large"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common"
        android:layout_marginTop="@dimen/common"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editedFoodNameTitle"
        style="@style/textTitle"
        android:text="@string/portionWeight" />
    <EditText
        android:id="@+id/editedPortionWeightValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_edit_text"
        android:hint="@string/enterValue"
        android:inputType="number"
        android:background="@drawable/edit_text_value"
        app:layout_constraintStart_toEndOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/common"
        app:layout_constraintTop_toTopOf="@id/editedPortionWeightTitle"
        app:layout_constraintBottom_toBottomOf="@id/editedPortionWeightTitle">
    </EditText>
    <TextView
        android:id="@+id/editedGlycemicIndexTitle"
        android:layout_width="@dimen/nutrient_value_weight_large"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common"
        android:layout_marginTop="@dimen/common"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editedPortionWeightTitle"
        style="@style/textTitle"
        android:text="@string/glycemicIndex" />
    <EditText
        android:id="@+id/editedGlycemicIndexValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_edit_text"
        android:hint="@string/enterValue"
        android:inputType="number"
        android:background="@drawable/edit_text_value"
        app:layout_constraintStart_toEndOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/common"
        app:layout_constraintTop_toTopOf="@id/editedGlycemicIndexTitle"
        app:layout_constraintBottom_toBottomOf="@id/editedGlycemicIndexTitle">
    </EditText>
    <TextView
        android:id="@+id/editedForHundredGrTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editedGlycemicIndexTitle"
        android:text="@string/enterNutrientsFor100Gr" />
    <TextView
        android:id="@+id/editedProteinsTitle"
        android:layout_width="@dimen/nutrient_value_weight_large"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common"
        android:layout_marginTop="@dimen/common"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editedForHundredGrTitle"
        style="@style/proteinsTextTitle"
        android:text="@string/proteins" />
    <EditText
        android:id="@+id/editedProteinsValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_edit_text"
        android:inputType="number"
        android:hint="@string/enterValue"
        android:background="@drawable/edit_text_value"
        app:layout_constraintStart_toEndOf="@id/divider"
        app:layout_constraintTop_toTopOf="@id/editedProteinsTitle"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/common"
        app:layout_constraintBottom_toBottomOf="@id/editedProteinsTitle">
    </EditText>
    <TextView
        android:id="@+id/editedFatsTitle"
        android:layout_width="@dimen/nutrient_value_weight_large"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common"
        android:layout_marginTop="@dimen/common"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editedProteinsTitle"
        style="@style/fatsTextTitle"
        android:text="@string/fats" />
    <EditText
        android:id="@+id/editedFatsValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_edit_text"
        android:inputType="number"
        android:hint="@string/enterValue"
        android:background="@drawable/edit_text_value"
        app:layout_constraintStart_toEndOf="@id/divider"
        app:layout_constraintTop_toTopOf="@id/editedFatsTitle"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/common"
        app:layout_constraintBottom_toBottomOf="@id/editedFatsTitle">
    </EditText>
    <TextView
        android:id="@+id/editedCarbsTitle"
        android:layout_width="@dimen/nutrient_value_weight_large"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common"
        android:layout_marginTop="@dimen/common"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editedFatsTitle"
        style="@style/carbsTextTitle"
        android:text="@string/carbohydrates" />
    <EditText
        android:id="@+id/editedCarbsValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_edit_text"
        android:inputType="number"
        android:hint="@string/enterValue"
        android:background="@drawable/edit_text_value"
        app:layout_constraintStart_toEndOf="@id/divider"
        app:layout_constraintTop_toTopOf="@id/editedCarbsTitle"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/common"
        app:layout_constraintBottom_toBottomOf="@id/editedCarbsTitle">
    </EditText>
    <TextView
        android:id="@+id/editedCaloriesTitle"
        android:layout_width="@dimen/nutrient_value_weight_large"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common"
        android:layout_marginTop="@dimen/common"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editedCarbsTitle"
        style="@style/caloriesTextTitle"
        android:text="@string/calories" />
    <EditText
        android:id="@+id/editedCaloriesValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_edit_text"
        android:inputType="number"
        android:hint="@string/enterValue"
        android:background="@drawable/edit_text_value"
        app:layout_constraintStart_toEndOf="@id/divider"
        app:layout_constraintTop_toTopOf="@id/editedCaloriesTitle"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/common"
        app:layout_constraintBottom_toBottomOf="@id/editedCaloriesTitle">
    </EditText>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/editedButtonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common"
        style="@style/Widget.AppTheme.IconButtonOk"
        app:layout_constraintTop_toBottomOf="@id/editedCaloriesValue"
        app:layout_constraintStart_toStartOf="parent"
        app:icon="@drawable/save_button_new_48dp">
    </com.google.android.material.button.MaterialButton>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/editedButtonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppTheme.IconButton"
        app:layout_constraintTop_toTopOf="@id/editedButtonSave"
        app:layout_constraintBottom_toBottomOf="@id/editedButtonSave"
        app:layout_constraintStart_toEndOf="@id/editedButtonSave"
        app:icon="@drawable/return_button_new_48dp">
    </com.google.android.material.button.MaterialButton>

</androidx.constraintlayout.widget.ConstraintLayout>